# GettingModuleToWork

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
math_module/: CMakeLists.txt  README.md
math_module/src/: math.cppm  math_impl.cpp
